--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bhanu-ey",
+  "name": "ey-tax-recalc-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@progress/kendo-charts-vue-wrapper": "^2018.3.1025",
+    "@progress/kendo-datasource-vue-wrapper": "^2018.3.1025",
+    "@progress/kendo-grid-vue-wrapper": "^2018.3.1025",
+    "@progress/kendo-theme-default": "^2.59.0",
+    "@progress/kendo-ui": "^2018.3.1107",
+    "@progress/kendo-upload-vue-wrapper": "^2018.3.1025",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-moment": "^4.0.0",
+    "vue-router": "^3.0.1",
+    "vue2-dropzone": "^3.5.2",
+    "vuetify": "^1.3.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
